Update desktop.css to fix spacing and nav bar

--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
   left: 0%;
   right: 0%;
   width: 100%;
+  height: 72px;
 }
 
 .logo {
